added underline to product gallery text

--- a/solution-hw1/CSS/style.css
+++ b/solution-hw1/CSS/style.css
@@ -39,11 +39,15 @@
 
   }
 
+
   .cinnammon-item:hover .original-index-text{
     font-weight: bold;
 
   }
 
+  .cinnammon-item .original-index-text p {
+    text-decoration: underline;
+}
 
 .original-products-details-text{
     text-align: center;
@@ -191,4 +195,5 @@ select {
 .add-box-together p {
     margin: 0; /* Remove default margin */
 }
+
 
