--- a/solution-hw2/CSS/style.css
+++ b/solution-hw2/CSS/style.css
@@ -111,7 +111,7 @@ select {
 helps with drop down container  */
 .dropdown-container {
     display: flex;
-    flex-direction: column; 
+    flex-direction:column; 
     max-width: 200px;
     margin-left: auto;
     margin-right: auto;
@@ -279,4 +279,9 @@ helps with drop down container  */
     border: none;
     border-top: 2px solid #333; 
     margin-left: 10px; 
+}
+
+    
+.orginal-bunbun-product-details-img {
+    
 }
