--- a/solution-hw3/CSS/style.css
+++ b/solution-hw3/CSS/style.css
@@ -28,12 +28,16 @@
   margin-right: auto;
 }
 
+.original-sentence-right-under-cart-text {
+  text-align: center;
+  font-size: x-large;
+}
+
 .original-products-text,
 .original-cart-text,
-.original-sentence-right-under-cart-text,
 .original-line-break-shopping-cart-text {
   text-align: center;
-  font-weight: large;
+  font-size: medium;
 }
 
 .original-index-price-text {
@@ -245,26 +249,29 @@ select {
   margin-left: 10px;
 }
 
-.product-page-price-flex {
-  display: flex;
-  justify-content: flex-end;
-  text-align: center;
-  padding-right: 500px;
-}
+/* .product-page-price-flex {
+  padding-right: 50px;
+  padding-left: 50px;
+  border: 2px solid black;
+  margin-left: auto;
+  margin-right: auto;
+} */
 
 .remove-text-under-picture p {
   text-decoration: underline;
   font-weight: bold;
   text-align: center;
-  padding-right: 150px;
+  padding-right: 140px;
+  border: 2px solid black;
 }
 
 .remove-with-picture {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-left: 0;
-  margin-bottom: 20px;
+  /* margin-left: 300px;
+  margin-bottom: 20px; */
+  border: 2px solid black;
 }
 
 .orginal-product-gallery-img {
@@ -275,7 +282,10 @@ select {
 
 .product-page-flex {
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: right;
+
+  border: black;
 }
 
 .right-wrapped {
@@ -332,4 +342,43 @@ select {
   height: 600px;
   padding-left: 250px;
   margin-right: 40px;
+}
+
+.original-under-image-shopping-cart-text {
+  border: 2px solid black;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 100px;
+}
+
+.shop-cart-everything {
+  border: 2px solid black;
+  display: flex;
+  flex-direction: column;
+}
+
+.shop-cart-everything {
+  display: flex;
+  flex-direction: row;
+  justify-content: center; /* Center the content horizontally */
+  align-items: center; /* Vertically center the content */
+  border: 2px solid black;
+  padding: 10px;
+}
+
+.product-page-price-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center; /* Center the price flex vertically */
+  padding: 0 20px;
+  border: 2px solid black;
+  margin-left: 30px;
+  margin-bottom: 75px;
+}
+
+.product-page-flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 50px; /* Align product details next to the image */
 }
